# meerkat

./: .gitignore  Caddyfile  LICENSE  PRD.md  README.md  docker-compose.yml
.github/workflows/: release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/meerkat-server/: Cargo.toml
backend/meerkat-server/src/: event_log.rs  lib.rs  main.rs  messages.rs  types.rs  websocket.rs
backend/meerkat-server/src/handlers/: create_object.rs  create_session.rs  delete_object.rs  helpers.rs  join_session.rs  leave_session.rs  mod.rs  request_state_sync.rs  select_object.rs  update_cursor.rs  update_name.rs  update_properties.rs  update_transform.rs
backend/meerkat-server/tests/: auth_test.rs  common.rs  concurrent_writes_test.rs  create_object_test.rs  eviction_close_test.rs  helpers_test.rs  integration_test.rs  join_session_test.rs  leave_session_test.rs  object_lifecycle_test.rs  session_isolation_test.rs  stress_test.rs  update_handlers_test.rs  websocket_test.rs
blender_plugin/: .gitignore  __init__.py  event_handlers.py  operators.py  panels.py  preferences.py  selection_overlay.py  state.py  utils.py  websocket_client.py
blender_plugin/tests/: helpers.py  mock_ws.py  run_tests.py  test_deletion.py  test_echo_suppression.py  test_event_dispatch.py  test_full_state_sync.py  test_names.py  test_presence.py  test_properties.py  test_reconnect.py  test_save_scene.py  test_transforms.py
website/: index.html  package-lock.json  package.json
website/src/: App.jsx  index.css
website/src/components/: BlenderViewport.jsx  CottageScene.jsx  FeatureCard.jsx  (+5 more)
(+9 files in other folders)
